...
    @State private var isSecondaryButtonClicked = false
    @State private var degreesRotating = 0.0
    @State private var xOffset: CGFloat = -70.0

    private let shooter = "shooterItem-rotate"
    private let capture = "captureObjectItem"
    private let buttonText = "Show Levels"
    private let shooterText = "Rotate the scarab shooter, then tap on the background to shoot."
    private let captureText = "When a ball falls into the scarab, you receive a free ball, but the limit is 10."

    private let maxOffset: CGFloat = 70.0
    private let maxRotationAngle: CGFloat = 180.0
    private let infoWidth: CGFloat = Constants.screenWidth / 3
...
